--- a/testApp/Base.lproj/Main.storyboard
+++ b/testApp/Base.lproj/Main.storyboard
@@ -1,13 +1,139 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Play Audio Views Controller-->
+        <scene sceneID="JE2-Fd-u85">
+            <objects>
+                <viewController id="szM-uA-c0e" customClass="PlayAudioViewsController" customModule="testApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="07N-VJ-U5e"/>
+                        <viewControllerLayoutGuide type="bottom" id="E2U-jK-8hR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yhF-fp-g7G">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggE-V2-mYx">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="stopBtn"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="150" y="480" width="100" height="100"/>
+                                </variation>
+                                <connections>
+                                    <action selector="stopAudio:" destination="szM-uA-c0e" eventType="touchUpInside" id="Lrn-AV-6Lx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfv-jo-Zeh">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="fastAudioBtn"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="214" y="69" width="174" height="174"/>
+                                </variation>
+                                <connections>
+                                    <action selector="playFastAudio:" destination="szM-uA-c0e" eventType="touchUpInside" id="wYt-NY-WoS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="myH-Om-sb0">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="chipmunkAudioBtn"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="20" y="272" width="174" height="174"/>
+                                </variation>
+                                <connections>
+                                    <action selector="playChipmunkAudio:" destination="szM-uA-c0e" eventType="touchUpInside" id="YWy-MQ-1wY"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xm9-Hq-Lku">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="vaderAudioBtn"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="214" y="272" width="174" height="174"/>
+                                </variation>
+                                <connections>
+                                    <action selector="playVaderAudio:" destination="szM-uA-c0e" eventType="touchUpInside" id="IgN-aD-WEk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t78-Od-Qpe">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="slowAudioBtn"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="20" y="69" width="174" height="174"/>
+                                </variation>
+                                <connections>
+                                    <action selector="playSlowAudio:" destination="szM-uA-c0e" eventType="touchUpInside" id="xED-LM-00J"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.61692832350000004" blue="0.83535039830000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="dfv-jo-Zeh" firstAttribute="top" secondItem="07N-VJ-U5e" secondAttribute="bottom" constant="49" id="88S-Wf-fpO"/>
+                            <constraint firstItem="ggE-V2-mYx" firstAttribute="centerX" secondItem="yhF-fp-g7G" secondAttribute="centerX" id="9Vy-o3-m4G"/>
+                            <constraint firstItem="t78-Od-Qpe" firstAttribute="top" secondItem="07N-VJ-U5e" secondAttribute="bottom" constant="49" id="XA4-3N-WXp"/>
+                            <constraint firstItem="E2U-jK-8hR" firstAttribute="top" secondItem="ggE-V2-mYx" secondAttribute="bottom" constant="45" id="XHs-De-gDR"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="t78-Od-Qpe" secondAttribute="leading" id="YSI-xw-52X"/>
+                            <constraint firstItem="myH-Om-sb0" firstAttribute="top" secondItem="07N-VJ-U5e" secondAttribute="bottom" constant="252" id="hIW-Vl-aot"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dfv-jo-Zeh" secondAttribute="trailing" constant="-8" id="jal-WL-TWT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xm9-Hq-Lku" secondAttribute="trailing" constant="-8" id="k3d-q9-Kzp"/>
+                            <constraint firstItem="xm9-Hq-Lku" firstAttribute="top" secondItem="07N-VJ-U5e" secondAttribute="bottom" constant="252" id="kOv-w6-ZHh"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="myH-Om-sb0" secondAttribute="leading" id="sRY-4L-8yc"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="ggE-V2-mYx"/>
+                                <exclude reference="dfv-jo-Zeh"/>
+                                <exclude reference="myH-Om-sb0"/>
+                                <exclude reference="xm9-Hq-Lku"/>
+                                <exclude reference="t78-Od-Qpe"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="XA4-3N-WXp"/>
+                                <exclude reference="YSI-xw-52X"/>
+                                <exclude reference="88S-Wf-fpO"/>
+                                <exclude reference="jal-WL-TWT"/>
+                                <exclude reference="hIW-Vl-aot"/>
+                                <exclude reference="sRY-4L-8yc"/>
+                                <exclude reference="k3d-q9-Kzp"/>
+                                <exclude reference="kOv-w6-ZHh"/>
+                                <exclude reference="9Vy-o3-m4G"/>
+                                <exclude reference="XHs-De-gDR"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="ggE-V2-mYx"/>
+                                <include reference="dfv-jo-Zeh"/>
+                                <include reference="myH-Om-sb0"/>
+                                <include reference="xm9-Hq-Lku"/>
+                                <include reference="t78-Od-Qpe"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="XA4-3N-WXp"/>
+                                <include reference="YSI-xw-52X"/>
+                                <include reference="88S-Wf-fpO"/>
+                                <include reference="jal-WL-TWT"/>
+                                <include reference="hIW-Vl-aot"/>
+                                <include reference="sRY-4L-8yc"/>
+                                <include reference="k3d-q9-Kzp"/>
+                                <include reference="kOv-w6-ZHh"/>
+                                <include reference="9Vy-o3-m4G"/>
+                                <include reference="XHs-De-gDR"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fdF-AQ-Bel" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1228.5" y="262"/>
+        </scene>
+        <!--Record-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Record" id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="testApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +141,79 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X9G-UN-kt8">
+                                <rect key="frame" x="250" y="103" width="100" height="100"/>
+                                <state key="normal" image="recordBtn"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="108" y="106" width="185" height="185"/>
+                                </variation>
+                                <connections>
+                                    <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PGo-yc-AFe"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1wG-2J-SR7">
+                                <rect key="frame" x="250" y="435" width="100" height="100"/>
+                                <state key="normal" image="stopBtn"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="150" y="455" width="100" height="100"/>
+                                </variation>
+                                <connections>
+                                    <action selector="stopRecord:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BO2-nU-8lt"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C9J-co-6sw">
+                                <rect key="frame" x="261" y="240" width="78" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="143" y="308" width="115" height="21"/>
+                                </variation>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.61692832349054827" blue="0.83535039830999691" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1wG-2J-SR7" secondAttribute="bottom" constant="45" id="3im-ui-Xgm"/>
+                            <constraint firstItem="C9J-co-6sw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cbs-cF-zQ6"/>
+                            <constraint firstItem="C9J-co-6sw" firstAttribute="top" secondItem="X9G-UN-kt8" secondAttribute="bottom" constant="17" id="MKj-z0-OHj"/>
+                            <constraint firstItem="X9G-UN-kt8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="r4S-75-vYI"/>
+                            <constraint firstItem="1wG-2J-SR7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rGP-Tj-zMK"/>
+                            <constraint firstItem="X9G-UN-kt8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="86" id="rhT-OQ-ZyW"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="rhT-OQ-ZyW"/>
+                                <exclude reference="MKj-z0-OHj"/>
+                                <exclude reference="3im-ui-Xgm"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="rhT-OQ-ZyW"/>
+                                <include reference="MKj-z0-OHj"/>
+                                <include reference="3im-ui-Xgm"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="recordBtn" destination="X9G-UN-kt8" id="2PA-Uk-5E5"/>
+                        <outlet property="recordingLbl" destination="C9J-co-6sw" id="CMq-Yc-zWs"/>
+                        <outlet property="stopBtn" destination="1wG-2J-SR7" id="0cI-fg-sl2"/>
+                        <segue destination="szM-uA-c0e" kind="show" identifier="stopRecording" id="sxQ-7o-CoN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="357" y="262"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="chipmunkAudioBtn" width="200" height="200"/>
+        <image name="fastAudioBtn" width="200" height="200"/>
+        <image name="recordBtn" width="200" height="200"/>
+        <image name="slowAudioBtn" width="200" height="200"/>
+        <image name="stopBtn" width="400" height="400"/>
+        <image name="vaderAudioBtn" width="200" height="200"/>
+    </resources>
 </document>
